[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/PolyHavenImport/logo-256.png" type="Texture" id=1]
[ext_resource path="res://addons/PolyHavenImport/asset_list.gd" type="Script" id=2]

[node name="AssetList" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layout" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Padding" type="MarginContainer" parent="Layout"]
margin_right = 1024.0
margin_bottom = 56.0
custom_constants/margin_right = 16
custom_constants/margin_top = 4
custom_constants/margin_left = 16
custom_constants/margin_bottom = 4

[node name="Header" type="HBoxContainer" parent="Layout/Padding"]
margin_left = 16.0
margin_top = 4.0
margin_right = 1008.0
margin_bottom = 52.0
size_flags_horizontal = 3
custom_constants/separation = 16

[node name="Logo" type="TextureButton" parent="Layout/Padding/Header"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 1 )
expand = true

[node name="Spacer" type="Control" parent="Layout/Padding/Header"]
margin_left = 64.0
margin_right = 845.0
margin_bottom = 48.0
size_flags_horizontal = 3

[node name="RefreshButton" type="Button" parent="Layout/Padding/Header"]
margin_left = 861.0
margin_top = 14.0
margin_right = 921.0
margin_bottom = 34.0
size_flags_vertical = 4
disabled = true
text = "Refresh"

[node name="LogoutButton" type="Button" parent="Layout/Padding/Header"]
margin_left = 937.0
margin_top = 14.0
margin_right = 992.0
margin_bottom = 34.0
size_flags_vertical = 4
text = "Logout"

[node name="Scroll" type="ScrollContainer" parent="Layout"]
margin_top = 60.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="MarginContainer" parent="Layout/Scroll"]
margin_right = 1024.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 8
custom_constants/margin_left = 16
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="GridContainer" parent="Layout/Scroll/Content"]
margin_left = 16.0
margin_top = 8.0
margin_right = 1008.0
margin_bottom = 532.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 16
custom_constants/hseparation = 24
columns = 2
[connection signal="pressed" from="Layout/Padding/Header/Logo" to="." method="_on_Logo_pressed"]
[connection signal="pressed" from="Layout/Padding/Header/RefreshButton" to="." method="_on_RefreshButton_pressed"]
[connection signal="pressed" from="Layout/Padding/Header/LogoutButton" to="." method="_on_LogoutButton_pressed"]
